<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4018.2">
  <POU Name="ER_Auto_FixedFlap" Id="{07b51e83-4e1d-4d13-b8c4-5d2457be850c}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM ER_Auto_FixedFlap
VAR_IN_OUT
	Station		:structStationCtrl;
END_VAR
VAR
	Timeout	:TON;	
	StpCtnPE_TOFF: Ton;
END_VAR

]]></Declaration>
    <Implementation>
      <ST><![CDATA[(**************************************************************************************************************)
(* GENERAL STATION MAPPING  *)
(**************************************************************************************************************)
(*Station.Name			:=	'CARTON ERECTOR & SIDE FLAP CLOSING';*)
Station.Rdy 			:= 	Station.Origin;
Station.AutoRun 		:=	(MC.AutoRunning OR Station.M_Step) AND 
							NOT (Station.Bypass OR Station.MajorFault OR Station.MinorFault);
ER_FixedFlap.RunReq		:= 	(H_ER_CtnPushInDone AND NOT H_ER_CtnSideFlapDone)			
							(*OR MC.DryRun OR Station.M_Step*) ;
ER_FixedFlap.RunCond	:=	(NOT CO_YPush.Running OR 
							(	CO_YPush.RunStep>=120 AND 
								CO_FlapGuide_Cyl_Var.S_HomePos AND 
								CO_Brdg_Cyl_Var.S_HomePos AND 
								CO_YPush_Strk_Cyl_Var.S_HomePos)) AND (*Y Pusher not pushing stack forward*)
							(*NOT Station.Running AND	*)							(*Erector Arm Not Running*)
							NOT (Station.Done OR MC.StopPressed);
Station.Run_NextStepPls	:=	(Station.AutoRun AND NOT Station.M_Step) OR 
							(Station.M_Step AND M_StepFwdPls) OR HMI.T_OneCycleRun;
Station.Run_PrevStepPls	:=	(Station.M_Step AND M_StepBwdPls);

(**************************************************************************************************************)
(* Auto Sequance*)
(**************************************************************************************************************)

IF Station.AutoRun OR Station.M_Step THEN

	CASE ER_FixedFlap.RunStep OF

	0 : 	(************* Ready To Run ****************)
			IF ER_FixedFlap.RunCond AND ER_FixedFlap.RunReq THEN
				ER_FixedFlap.RunStep := ER_FixedFlap.RunStep + 10;	(*Activate Side Flap Closing*)
			END_IF

	10 : 	(************* Rear and Front Side Fixed Flap Close Cylinders Fwd ****************)
			Station.Status 		:= '10: Side Fixed Flap Close Cylinders Fwd';
			Station.StatusInt	:= 270;
			
			IF Cfg_CollDircLtoR THEN
				ER_FFlapL_Cyl_Var.In_AutoWork := TRUE;
				ER_FFlapL_Cyl_Var.In_AutoHome := FALSE;		
				IF ER_FFlapL_Cyl_Var.S_WorkPos THEN
					ER_RFlapL_Cyl_Var.In_AutoWork := TRUE;
					ER_RFlapL_Cyl_Var.In_AutoHome := FALSE;		
				END_IF	
			ELSE
				ER_FFlapR_Cyl_Var.In_AutoWork := TRUE;
				ER_FFlapR_Cyl_Var.In_AutoHome := FALSE;
				IF ER_FFlapR_Cyl_Var.S_WorkPos THEN
					ER_RFlapR_Cyl_Var.In_AutoWork := TRUE;
					ER_RFlapR_Cyl_Var.In_AutoHome := FALSE;		
				END_IF						
			END_IF
			
			IF (Cfg_CollDircLtoR AND 
				(ER_FFlapL_Cyl_Var.S_WorkPos AND ER_RFlapL_Cyl_Var.S_WorkPos)) OR
				(NOT Cfg_CollDircLtoR AND
				((ER_FFlapR_Cyl_Var.S_WorkPos AND ER_RFlapR_Cyl_Var.S_WorkPos))
				) AND Station.Run_NextStepPls THEN
				ER_FFlapR_Cyl_Var.In_AutoWork := FALSE;
				ER_RFlapR_Cyl_Var.In_AutoWork := FALSE;
				ER_FFlapL_Cyl_Var.In_AutoWork := FALSE;
				ER_RFlapL_Cyl_Var.In_AutoWork := FALSE;
				ER_FixedFlap.RunStep := ER_FixedFlap.RunStep + 10;
			END_IF
			
	20 : 	(************* Bottom Flap Holder Vacuum OFF ****************)
			Station.Status 		:= '20: Bottom Flap Holder Vacuum OFF';
			Station.StatusInt	:= 271;
			
			(*ER_BFlapR_Vac_Var.In_AutoVacuum := FALSE;
			ER_BFlapR_Vac_Var.In_AutoPurge := TRUE;*)
			ER_BFlapL_Vac_Var.In_AutoVacuum := FALSE;
			ER_BFlapL_Vac_Var.In_AutoPurge := TRUE;
			
			IF (*ER_BFlapR_Vac_Var.S_Release AND*) ER_BFlapL_Vac_Var.S_Release AND
				Station.Run_NextStepPls THEN
				ER_BFlapL_Cyl_Var.In_AutoWork := FALSE;
				ER_BFlapR_Cyl_Var.In_AutoWork := FALSE;
				(*ER_BFlapR_Vac_Var.In_AutoVacuum := FALSE;*)
				ER_BFlapL_Vac_Var.In_AutoVacuum := FALSE;
				ER_FixedFlap.RunStep := ER_FixedFlap.RunStep + 10;
			END_IF


	30 : 	(************* Bottom Flap Vacuum Off ****************)
			Station.Status := '30: Bottom Flap Close Vacuum Off';
			Station.StatusInt	:= 271;
			
				(*ER_BFlapR_Vac_Var.In_AutoVacuum := FALSE;
				ER_BFlapR_Vac_Var.In_AutoPurge := TRUE;*)
				ER_BFlapL_Vac_Var.In_AutoVacuum := FALSE;
				ER_BFlapL_Vac_Var.In_AutoPurge := TRUE;
			
			IF 	ER_BFlapL_Vac_Var.S_Release (*AND 
				ER_BFlapR_Vac_Var.S_Release*) AND 
				Station.Run_NextStepPls THEN
				ER_BFlapL_Cyl_Var.In_AutoWork := FALSE;
				ER_BFlapR_Cyl_Var.In_AutoWork := FALSE;
				ER_FixedFlap.RunStep := ER_FixedFlap.RunStep + 10;
			END_IF

			
	40 :	(************* Top Flap Close ****************)
			Station.Status 		:= '40: Top Flap Close';
			Station.StatusInt	:= 272;
			
			IF Cfg_CollDircLtoR THEN
					ER_TFlapClsL_Cyl_var.In_AutoWork 	:=TRUE;
					ER_TFlapClsL_Cyl_var.In_Autohome 	:=FALSE;
					ER_TFlapOpnL_Cyl_var.In_AutoWork 	:=FALSE;
					ER_TFlapOpnL_Cyl_var.In_Autohome 	:=TRUE;
					ER_TFlapClsR_Cyl_Var.In_AutoWork	:= TRUE;
					ER_TFlapClsR_Cyl_Var.In_AutoHome	:= FALSE;
					
				IF 	ER_TFlapClsL_Cyl_var.S_WorkPos  AND 
					ER_TFlapOpnL_Cyl_var.S_HomePos AND 
					Station.Run_NextStepPls THEN
					ER_TFlapClsL_Cyl_var.In_AutoWork 	:=FALSE;
					ER_TFlapOpnL_Cyl_var.In_Autohome 	:=FALSE;
					ER_FixedFlap.RunStep := ER_FixedFlap.RunStep + 10;
				END_IF
				
			ELSE
					ER_TFlapClsR_Cyl_var.In_AutoWork 	:=TRUE;
					ER_TFlapClsR_Cyl_var.In_Autohome 	:=FALSE;
					ER_TFlapOpnR_Cyl_var.In_AutoWork 	:=FALSE;
					ER_TFlapOpnR_Cyl_var.In_Autohome 	:=TRUE;
					ER_TFlapClsL_Cyl_Var.In_AutoWork	:= TRUE;
					ER_TFlapClsL_Cyl_Var.In_AutoHome	:= FALSE;
					
				IF 	ER_TFlapClsR_Cyl_var.S_WorkPos  AND 
					ER_TFlapOpnR_Cyl_var.S_HomePos AND 
					Station.Run_NextStepPls THEN
					ER_TFlapClsR_Cyl_var.In_AutoWork 	:=FALSE;
					ER_TFlapOpnR_Cyl_var.In_Autohome 	:=FALSE;
					ER_FixedFlap.RunStep := ER_FixedFlap.RunStep + 10;
				END_IF
				
			
			END_IF


	
	50 : 	(************* All Side Flap Close Cylinders Bwd ****************)
			Station.Status 		:= '50: All Side Flap Close Cylinders Bwd';
			Station.StatusInt	:= 273;
			
			ER_FFlapL_Cyl_Var.In_AutoWork := FALSE;
			ER_FFlapL_Cyl_Var.In_AutoHome := TRUE;
			ER_FFlapR_Cyl_Var.In_AutoWork := FALSE;
			ER_FFlapR_Cyl_Var.In_AutoHome := TRUE;
			
			IF ER_FFlapL_Cyl_Var.S_HomePos AND 
				ER_FFlapR_Cyl_Var.S_HomePos AND
				Station.Run_NextStepPls THEN
				ER_FFlapR_Cyl_Var.In_AutoHome := FALSE;
				ER_RFlapR_Cyl_Var.In_AutoHome := FALSE;
				ER_FFlapL_Cyl_Var.In_AutoHome := FALSE;
				ER_RFlapL_Cyl_Var.In_AutoHome := FALSE;
				ER_FixedFlap.RunStep := 1000;
			END_IF

	1000 : 	(************* Process Done ****************)
			Station.Status 			:= '1000: Process Done';
			Station.StatusInt		:= 499;
			M_StepRun := FALSE;
			H_ER_CtnSideFlapDone 	:= TRUE;
			H_ER_CtnPushInDone 		:= FALSE;
			H_ER_CtnRdyForPushIn 	:= FALSE;
			ER_FixedFlap.RunStep 	:= 0;
			

	END_CASE


ELSE
	
	ER_FixedFlap.RunStep := 0;
	
END_IF

Station.Running := (ER_FixedFlap.RunStep>0) OR (Station.RunStep>5);








]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>